# underapproximation_type

./: .gitignore  Dockerfile  LICENSE  README.md  dune-project  get_table1.py  get_table2.py  handwritten.txt  iter_benchs.py  meta-config.json  revise_config.py  run_bench.py  run_many.py  synth_iter_benchs.py  underapproximation_type.opam
abstraction/: dune  lemmas.ml  normalprim.ml  overprim.ml  prim.ml  prim_map.ml  underprim.ml
ast/: anormal.ml  ast.ml  ast.mli  dune  languages.ml  lemma.ml  modu.ml  normal_anormal.ml  normalty.ml  op.ml  over_anormal.ml  overty.ml  qtypectx.ml  quantified.ml  qunder.ml  refinement.mli  simpletypectx.ml  strid.ml  termlang.ml  termlang.mli  type.mli  type_dec.ml  typectx.ml  typectx.mli  typectx.mli.bak  typed.ml  underty.ml
autoverificaiton/: ast.ml  autov.ml  check.ml  dune  encoding.ml  enum.ml  frontend.ml  func_interp.ml  fv.ml  parse.ml  peval.ml  prop.ml  query.ml  smtty.ml  stat.ml  typecheck.ml  unify_qvs.ml  unique.ml  z3aux.ml
autoverificaiton/z3parser/: Makefile  dune  lexer.mll  parse.ml  parser.mly  past.mli  pprint.ml
backend/: check.ml  dune  litencoding.ml  propencoding.ml  regencoding.ml  smtquery.ml  z3aux.ml  z3hex.ml  z3reg.ml
config/: benchmark.json  config.json  config_ord.json
coq_proof/: Atom.v  AuxTyping.v  BasicTyping.v  BasicTypingProp.v  CoreLang.v  CoreLangProp.v  CtxDenotation.v  CtxDenotationProp.v  CtxDenotationTac.v  InvDenotation.v  InvDenotationProp1.v  InvDenotationProp2.v  InvDenotationProp3.v  InvDenotationProp4.v  ListCtx.v  NamelessTactics.v  OperationalSemantics.v  OperationalSemanticsProp.v  RDInv.v  RDInv2.v  RDInv5.v  RefinementDenotation.v  RefinementDenotationProp.v  RefinementDenotationTac.v  RefinementType.v  RefinementTypeDenotation.v  RefinementTypeDenotationProp.v  RefinementTypeDenotationTac.v  RefinementTypeTac.v  Soundness.v  SyntaxSugar.v  Tactics.v  TermOrdering.v  Typing.v  WFCtxDenotation.v  WFCtxDenotationProp.v  WFDenotation.v  WFDenotationTac.v  _CoqProject
data/: bench.json  functional_lemmas.ml  lemmas.ml  typedecs.ml
doc/: README.html
driver/: config.ml  dune  infer_ctx.ml  inputstage.ml
env/: config.ml  dune  env.ml
frontend/: anormal.ml  dune  expr.ml  lemma.ml  overty.ml  overtype.ml  pat.ml  prop.ml  qtypectx.ml  quantified.ml  qunderty.ml  signature.ml  structure.ml  type.ml  typectx.ml  typedec.ml  underty.ml  undertype.ml  utypectx.ml  value.ml
frontend_opt/: dune  to_constant.ml  to_id.ml  to_item.ml  to_lit.ml  to_op.ml  to_prop.ml  to_raw_term.ml  to_rty.ml  to_typectx.ml
frontendz/: anormal.ml  dune  expr.ml  to_constant.ml  to_cty.ml  to_id.ml  to_item.ml  to_lit.ml  to_notation.ml  to_op.ml  to_prop.ml  to_raw_term.ml  to_rty.ml  to_type_dec.ml  to_typectx.ml  typedec.ml  underty.ml
idea/: .#merge.v  merge.v
inference/: bv.ml  cegis.ml  check_false.ml  dune  feature.ml  fvec_tab.ml  infer.ml  infer_ctx.ml
language/: dune  lang.ml  language.ml  languages.ml  lemma.ml  modu.ml  op.ml  qtypectx.ml  quantifiable.mli  quantified.ml  qunder.ml  rawlang.ml  refinement.mli  simpletypectx.ml  strid.ml  type.mli  type_dec.ml  typectx.ml  typedlang.ml  underty.ml  value.ml
languagez/: dune  languagez.ml  lemma.ml  mustmaytypectx.ml
new_proof/: .gitignore  Atom.v  AuxTyping.v  BasicLogicalR.v  BasicLogicalR.v.bak  BasicLogicalR.v.value  BasicTyping.v  BasicTypingProp.v  CoreLang.v  CoreLangProp.v  CtxDenotationTac.v  Denotation.v  ErrOperationalSemantics.v  ErrOperationalSemanticsProp.v  ListCtx.v  Makefile.conf  Maps.v  NamelessTactics.v  NormalTypeSystem.v  OperationalSemantics.v  OperationalSemanticsProp.v  RDInv.v  RDInv2.v  RDInv3.v  RDInv4.v  RDInv5.v  Refinement.v  Refinement.v.bak  Refinement.v.bak2  RefinementDenotation.v  RefinementDenotationHalt.v  RefinementDenotationHalt.v.bak  RefinementDenotationProp.v  RefinementDenotationProp.v.bak  RefinementDenotationProp.v.bak2  RefinementDenotationProp.v.bak3  RefinementDenotationTac.v  RefinementProp.v  RefinementProp.v.bak  RefinementTac.v  (+10 more)
preprocessing/: dune  normal_constant_typing.ml  normal_cty_typing.ml  normal_id_typing.ml  normal_item_typing.ml  normal_lit_typing.ml  normal_op_typing.ml  normal_prop_typing.ml  normal_rty_typing.ml  normal_term_typing.ml
primitive/: primitive.ml
proof/: .Ax.aux  .BasicConstant.aux  .CoreLang.aux  .CoreLang.v.swp  .CoreLangSimp.aux  .CtxErase.aux  .Denotation.aux  .DenotationAux.aux  .DenotationSimp.aux  .DenotationSpecs.aux  .DenotationSpecsSimp.aux  .Imp.aux  .LinearContext.aux  .Makefile.d  .Maps.aux  .MoreStlc.aux  .NoDup.aux  .NormalTypeSystem.aux  .NormalTypeSystemSimp.aux  .RfTypeDef.aux  .SmallStep.aux  .Smallstep.aux  .Soundness.aux  .Stlc.aux  .Subtyping.aux  .SubtypingSimp.aux  .TermMeet.aux  .TermOrdering.aux  .TypeClosed.aux  .TypeClosedSimp.aux  .TypeDisj.aux  .Types.aux  .TypingRules.aux  .WellFormed.aux  .WellFormedSimp.aux  .WellFormedSpecs.aux  .gitignore  .lia.cache  Ax.glob  Ax.v  (+96 more)
scripts/: colored.py  from_cabalt.py  from_cobalt.py  get_table1.py  get_table2.py  get_table3.py  infer.py  iter_benchs.py  revise_config.py  run_bench.py  run_many.py  run_many_alone.py  run_stlc.py  show_all.py  synth_iter_benchs.py  test.py  to_new_syntax.py  tool.py  validate.py
static/: dune  inputstage.ml
subtyping/: dune  subcty.ml  subrty.ml
syntax/: _constant.ml  _cty.ml  _item.ml  _lit.ml  _op.ml  _prop.ml  _raw_term.ml  _rty.ml  _term.ml  _typectx.ml  constant.ml  constructor_declaration.ml  cty.ml  dune  item.ml  lit.ml  mk.sh  op.ml  prop.ml  raw_term.ml  rty.ml  syntax.json  term.ml  typectx.ml
test/: dune
theory/: .#new.v  .#test.v  decidable.smt2  epr.v  id.hs  list.v  localv.v  merge.hs  merge_sort.hs  new.v  qdatav.smt2  (+8 more)
typecheck/: context_conversion.ml  dependentcheck.ml  dune  infer.ml  inv_check.ml  opcheck.ml  overcheck.ml  overcheck.ml.bak  oversub.ml  overtycheck.ml  persistence_check.ml  primitive.ml  reachability_check.ml  termcheck.ml  typectx.ml  undercheck.ml  underdt.ml  undersub.ml  undersub.ml.bak  undertycheck.ml  well_found.ml
typecheck/under/: checkaux.ml  dt_eq.ml  litcheck.ml  param.ml  underctx.ml
(+1478 files in other folders)
