(library
 (name ast)
 (wrapped false)
 (modules_without_implementation type quantifiable refinement)
 (modules
   anormal
   languages
   lemma
   modu
   op
   overty
   prim
   qtypectx
   quantifiable
   quantified
   qunder
   refinement
   simpletypectx
   strid
   termlang
   type
   type_dec
   typectx
   underty
   value
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
  (libraries zzdatatype autov utils normalty)
)
