(library
 (name ast)
 (wrapped false)
 (modules_without_implementation type quantifiable refinement)
 (modules
   anormal
   ast
   lemma
   modu
   op
   overty
   prim
   refinement
   simpletypectx
   termlang
   type
   type_dec
   typectx
   underty
   value
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
  (libraries zzdatatype autov utils normalty)
)
