(library
 (name autov)
 (wrapped true)
 (modules
   ast
   ; smtty
   prop
   ; typecheck
   z3aux
   query
   check
   autov
   frontend
   ; fv
   encoding
   unique
   enum
   func_interp
   parse
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries zzdatatype str z3 ocaml_parser normalty utils z3parser)
)
