(library
 (name autov)
 (wrapped true)
 (modules
   ast
   autov
   check
   encoding
   enum
   frontend
   func_interp
   parse
   peval
   prop
   query
   stat
   unify_qvs
   unique
   z3aux
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries language_utils str z3 z3parser env)
)
