(library
 (name frontend)
 (wrapped true)
 (libraries utils ast core ocaml_parser)
 (modules
   type
   value
   ; prop
   pat
   expr
   ; signature
   structure
   overty
   underty
   quantified
   qunderty
   anormal
   typectx
   qtypectx
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)
