(library
 (name frontend)
 (wrapped true)
 (libraries utils ast core ocaml_parser abstraction)
 (modules
   anormal
   expr
   lemma
   overty
   pat
   qtypectx
   quantified
   qunderty
   structure
   typectx
   typedec
   underty
   value
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)
