(library
 (name frontend)
 (wrapped true)
 (libraries utils ast core ocaml_parser abstraction)
 (modules
   ; qtypectx
   quantified
   ; qunderty
   anormal
   expr
   lemma
   overty
   pat
   structure
   typectx
   utypectx
   typedec
   underty
   value
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)
