(copy_files# under/*.ml{,i})
(library
 (name typecheck)
 (wrapped true)
 (libraries utils languages core translate abstraction)
 (modules
   ; under/
   litcheck
   checkaux
   param
   ; ./
   opcheck
   termcheck
   oversub
   undersub
   overcheck
   undercheck
   undertycheck
   overtycheck
   dependentcheck
   ; well_found
 ))
