(copy_files# under/*.ml{,i})
(library
 (name typecheck)
 (wrapped true)
 (libraries utils languages core translate abstraction)
 (modules
   ; under/
   litcheck
   checkaux
   param
   ; ./
   opcheck
   termcheck
   oversub
   undersub
   overcheck
   undercheck
   undertycheck
   overtycheck
   dependentcheck
   inv_check
   persistence_check
   reachability_check
   ; well_found
 ))
