(copy_files# under/*.ml{,i})
(library
 (name typecheck)
 (wrapped true)
 (libraries utils languages core translate abstraction env)
 (modules
   ; under/
   litcheck
   checkaux
   param
   ; ./
   opcheck
   termcheck
   oversub
   undersub
   overcheck
   undercheck
   undertycheck
   overtycheck
   dependentcheck
   ; inv_check
   underctx
   persistence_check
   reachability_check
   dt_eq
   ; well_found
 ))
